--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "pandas>=1.3.5",
     "mdtraj>=1.9.7",
     "Bio",
-    "mp_nerf==1.0.3"
+    "mp_nerf==1.0.3",
+    "openmm",
 ]
 
 [project.scripts]
