--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,10 @@ dependencies = [
 
 [project.scripts]
 cimist-fit = "cimist.fit:main"
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+select = ["E", "F"]
+ignore = ["E741"]
